expricy eklendi